Alteração página inicial

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Favorites Organizer powered by Cloudant</title>
+	<title>Sandra Amorim</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
 	<div class = "banner">
 		<img class="newappIcon" src="images/newapp-icon.png">
 		<p class = "appTitle">
-			Favorites Organizer powered by Cloudant
+			Exercício 4 by Sandra Amorim
 		</p>
 	</div>
 
@@ -29,7 +29,7 @@
 				<img src="images/add.png" alt="add">
 			</button>
 			<br>
-			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
+			<a class = "infoImg" onclick="toggleAppInfo()">Ajuda!!!!!!!!!!!!!!!!!!!!!!</a>
 		</div>
 		<div id='appinfo' class = 'appinfo' style='display: none;'>
 						This application helps you organize your favorite files.</br>
